--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ body {
     padding-bottom: 0px;
 }
 
+.mepet1 {
+    margin-bottom: -10px;
+    padding: 0px;
+}
+
 .cntnr2 {
     margin: 40px auto;
     max-width: 900px;
