--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ body {
     padding-top: 0px;
     padding-bottom: 0px;
 }
-
+/* 
 .mepet1 {
     margin-bottom: -10px;
-    padding: 0px;
+    padding: 0px; */
 }
 
 .cntnr2 {
