--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ body {
     padding-top: 0px;
     padding-bottom: 0px;
 }
-/* 
-.mepet1 {
+
+/* .mepet1 {
     margin-bottom: -10px;
-    padding: 0px; */
-}
+    padding: 0px;
+} */
 
 .cntnr2 {
     margin: 40px auto;
